<resources>
    <string name="app_name" translatable="false">Vid Downloader</string>
    <string name="GOOGLE_PLAY_App_Liscencekey" translatable="false">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAl8V5b1GAl4mzLk9U+07MuGzuTnr3ncMSwiecJw7OzKuN8WTnEiDCXCX3EbqzMv10nuK6AFmkT21Jcs1PNzkhcniNepAvyhsbD+PoYESe7s56CHI7rx3mvP5TwJFscGHgVXqi6wVtTdCYVdk21CWIO3N2+W6Lmm/W7JWHTu+QzcXFRpKrFry0VQ6YsyZFn53WxPq/OKKUPKK4jBjeevhViFEaFWHyunTkNLmlU6YG+IqPwTJ0qC/fVWHK2Dg2eAPHX/2fCJJnmDS9+Op+J2el1Wjp6ekGCYiCS/vDj8vnGNf1MtKtwnNPcWbkgq7RwtQ/tXAf1LEti3arRjyOAXr6TwIDAQAB</string>
    <string name="onsignalappid" translatable="false">960769a9-5bf6-48e3-af8e-49a512c74c75</string>
    <string name="privacy_policy_url" translatable="false">https://feelthecoder-8b674.web.app/policy/viddownloader.html</string>
    <string name="developer_name" translatable="false">\@feelthecoder</string>
    <string name="google_developer_id" translatable="false">feelthecoder</string>
    <string name="supportemail" translatable="false">feelthecoder@gmail.com</string>
    <string name="by_infusiblecoder" translatable="false">feelthecoder</string>
    <string name="description_goes_here">Description Goes Here</string>
    <string name="coins_100" translatable="false">100_coins</string>
    <string name="coins_500" translatable="false">500_coins</string>
    <string name="playstoresubscription_premium1month" translatable="false">buy_basic</string>
    <string name="playstoresubscription_premium3month" translatable="false">buy_premium</string>
    <string name="playstoresubscription_premium6months" translatable="false">buy_premium_6months</string>
    <string name="playstoresubscription_premium12months" translatable="false">buy_premium_12months</string>
   <string name="AdmobAppId" translatable="false">ca-app-pub-7909583069931762~3113792386</string>
   <string name="AdmobBanner" translatable="false">ca-app-pub-7909583069931762/7445657748</string>
   <string name="AdmobAppopenads" translatable="false">ca-app-pub-7909583069931762/1420387014</string>
   <string name="AdmobInterstitial" translatable="false">ca-app-pub-7909583069931762/3718165725</string>
   <string name="AdmobRewardedInterstitial" translatable="false">ca-app-pub-7909583069931762/2968637943</string>
   <string name="AdmobRewardID" translatable="false">ca-app-pub-7909583069931762/5191476609</string>
   <string name="AdmobRewardVideoExtraFeatures" translatable="false"></string>
   <string name="AdmobNativeID" translatable="false">ca-app-pub-7909583069931762/2565313262</string>
    <string name="sintony" translatable="false">sintony-regular.otf</string>
    <string name="gallery_name">Gallery</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="str_developed_with_love">Developed with ❤ in <b>India</b></string>
    <string name="info_permission_denied">Sorry permission denied. We can not open this app on your device, please try again later.</string>
    <string name="format_request_permision">%1$s will need to have read/write permission your sdcard to save Files.Do you want to grant it?</string>
    <string name="SharingVideoSubject">Sharing Downloaded Video</string>
    <string name="SharingVideoTitle">Sharing Video</string>
    <string name="SharingVideoBody">Sharing Video File</string>
    <string name="privacy_message">hello</string>
    <string name="RateAppTitle">Like this app?</string>
    <string name="RateApp">Share the love by rating 5 stars in Play Store. 😘</string>
    <string name="how_to_download_videos">How to download videos?</string>
    <string name="share_the_video_to_aio_video_downloader_app_or">• Share the video to Vid Downloader app (or)</string>
    <string name="simply_copy_the_link_of_any_video">• Simply copy the link of any video</string>
    <string name="make_sure_auto_download_service_is_running">• Make sure \'Auto Download Service\' is running</string>
    <string name="paste_video_url_here">Paste Video URL here…</string>
    <string name="download">Download</string>
    <string name="options">Options</string>
    <string name="no_watermark">No Watermark</string>
    <string name="remove_watermark_from_downloaded_video">Remove watermark from downloaded video</string>
    <string name="auto_download">Auto Download</string>
    <string name="simply_copy_the_link_of_video_to_start_download">Simply copy the link of video to start download</string>
    <string name="currently_supports">Currently Supports</string>
    <string name="tiktok">TikTok</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="instagram" translatable="false">Instagram</string>
    <string name="youtube" translatable="false">Youtube</string>
    <string name="dailymotion">Dailymotion</string>
    <string name="twitter">Twitter</string>
    <string name="viemo">" We collect the minimum amount of information about you that is commensurate with providing you with a satisfactory service. This policy indicates the type of processes that may result in data being collected about you. Your use of this website gives us the right to collect that information. "</string>
    <string name="message_title">Message Title</string>
    <string name="message_content">Message Content</string>
    <string name="auto_download_not_working">Auto Download not working?</string>
    <string name="make_sure_app_is_running_in_background">• Make sure app is running in the background</string>
    <string name="restart_the_app_if_that_doesn_t_work">• Restart the app if that doesn\'t work</string>
    <string name="contact_developer_before_leaving_a_negative_review">• Contact developer before leaving a negative review</string>
    <string name="author">Author</string>
    <string name="music_author">Music - Author</string>
    <string name="starting_download">Starting download…</string>
    <string name="watch">WATCH</string>
    <string name="download_fragment">Download</string>
    <string name="gallery_fragment">Gallery</string>
    <string name="grant_option">Grant</string>
    <string name="permission_title">Permission Required!</string>
    <string name="cancel_option">Cancel</string>
    <string name="rate_dialog">RATE</string>
    <string name="later_btn">LATER</string>
    <string name="auto_download_title_notification">Auto Download Service</string>
    <string name="auto_download_title_notification_start">Copy the link of video to start download</string>
    <string name="stop_btn">Stop</string>
    <string name="restarted_service">Service restarted</string>
    <string name="downloading_des">Downloading</string>
    <string name="url_not_suppotr">This url not supported or no media found!</string>
    <string name="we_cant_allow">We cannot allow to download videos form this website.</string>
    <string name="genarating_download_link">Generating download link</string>
    <string name="somthing">Something went wrong!</string>
    <string name="delete_confirm">Selected video will be permanently deleted. This action cannot be undone. </string>
    <string name="don_start">Downloading Start!</string>
    <string name="somth_video_wrong">\"Something went wrong while playing video! Please try again \"</string>
    <string name="went_shARRE">\"Something went wrong while sharing video! Please try again \"</string>
    <string name="error_occ">Error occurred!</string>
    <string name="install_fb">Install Social app</string>
    <string name="install_tik">Install Tiktok app</string>
    <string name="install_ins">Install Social app</string>
    <string name="enter_valid">Please Enter a valid URI</string>
    <string name="aio_auto">All Auto Download</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="StatusSaver">Status Saver</string>
    <string name="video_downloader_gallery">Video Downloader Gallery</string>
    <string name="status_saver_gallery">Status Saver Gallery</string>
    <string name="appnotinstalled">WhatsApp Is Not Installed Kindly Install It</string>
    <string name="privacy">PRIVACY POLICY</string>
    <string name="language">Language</string>
    <string name="open_whatsapp">Open WhatsApp</string>
    <string name="privacytxt">Privacy</string>
    <string name="delete">Delete</string>
    <string name="noApp_f">No application found to open this file.</string>
    <string name="file_del">File was Deleted</string>
    <string name="are_sure_del">Are you sure you want to delete this file?</string>
    <string name="del_tit">DELETE?</string>
    <string name="nn">No</string>
    <string name="yyy">Yes</string>
    <string name="vidd">\" video?\"</string>
    <string name="selected_i">\" Selected\"</string>
    <string name="choose">Choose</string>
    <string name="watch_arr">Watch</string>
    <string name="del_arr">Delete</string>
    <string name="share_arr">Share</string>
    <string name="saved_to">\"Saved to: \"</string>
    <string name="refre">Refreshed!</string>
    <string name="pernecessory">Permission necessary</string>
    <string name="write_neesory">Write Storage permission is necessary to Download Images and Videos!!!</string>
    <string name="yes">Yes</string>
    <string name="stor_saver">Download</string>
    <string name="se1">STEP 1</string>
    <string name="se_2">STEP 2</string>
    <string name="se_3">STEP 3</string>
    <string name="tap_wp">Tap to open WhatsApp.</string>
    <string name="vie_rec">View Recent Stories and Open Status Saver.</string>
    <string name="dow_sto">Download Stories you want!</string>
    <string name="invalid_url">Invalid Video URL or Check Internet Connection</string>
    <string name="savedstt">Download </string>
    <string name="install_ytd">Install Youtube app</string>
    <string name="install_twi">Install Twitter app</string>
    <string name="install_topbuzz">Install Topbuzz app</string>
    <string name="install_viemoo">Install Vimeo app</string>
    <string name="play_video_begin_des">Play video from begin when return to Home Screen</string>
    <string name="battery_saver">Battery saver</string>
    <string name="save_battery">Save battery</string>
    <string name="select_video">Select video</string>
    <string name="set_up_video_wallpaper">Set up Video Wallpaper</string>
    <string name="set_wallpaper">Set Wallpaper</string>
    <string name="sound_on">Sound on</string>
    <string name="sound_play_begin">Play from begin</string>
    <string name="open_sound_of_video">Open sound of video</string>
    <string name="error_emty_video">Error! Chose video</string>
    <string name="please_select_video">Please select Video</string>
    <string name="rate_it">OK</string>
    <string name="alert">Alert</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="btn_no">No</string>
    <string name="open_gallery">Visit Gallery</string>
    <string name="rate_us">Rate Us</string>
    <string name="are_you_sure_you_want_to_exit">Are You Sure You Want To Exit ?</string>
    <string name="repost">Repost</string>
    <string name="download_tiktok_video">Download Tiktok Video</string>
    <string name="removeads">Remove Ads</string>
    <string name="search_a_username">Search for a Username</string>
    <string name="youneedloginfirest">You need to login first to get results</string>
    <string name="as_of_the_new_api_update_you_can_use_the_bilk_downloader_only_if_your_account_is_logged_in">As of the new API update you can use the bulk downloader only if your account is logged in</string>
    <string name="buy_coins">Buy Coins</string>
    <string name="watch_video_ad_15_coins">Watch Video ad (15 coins)</string>
    <string name="watch_interstitial_ad_5_coins">Watch Normal Ad (5 coins)</string>
    <string name="watch_ads_to_get_coins">Watch Ads To Get Coins</string>
 <string name="buy_100_coins">Buy 100 Coins</string>
</resources>