<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/GetMoreClickbottomSheet"
    android:layout_width="match_parent"
    android:background="@color/md_white_1000"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/clicks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="You have 0 Coins"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ProgressBar
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:visibility="invisible"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:gravity="start"
            android:text="@string/watch_ads_to_get_coins"
            android:textSize="15sp"
            android:textStyle="bold" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightgray" />
        <Button
            android:id="@+id/btn_intAd"
            android:layout_width="match_parent"
            android:textColor="@color/md_white_1000"
            android:layout_height="wrap_content"
            android:background="@color/blue_colorPrimaryDark"
            android:layout_margin="10dp"
            android:visibility="visible"
            android:text="@string/watch_interstitial_ad_5_coins" />
        <Button
            android:id="@+id/btn_videoAd"
            android:layout_width="match_parent"
            android:textColor="@color/md_white_1000"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/blue_colorPrimaryDark"
            android:visibility="visible"
            android:text="@string/watch_video_ad_15_coins" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:gravity="start"
            android:text="@string/buy_coins"
            android:textSize="15sp"
            android:textStyle="bold" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightgray" />
        <Button
            android:id="@+id/btn_100"
            android:layout_width="match_parent"
            android:textColor="@color/md_white_1000"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/blue_colorPrimaryDark"
            android:visibility="visible"
            android:text="@string/buy_100_coins" />
        <Button
            android:id="@+id/btn_200"
            android:layout_width="match_parent"
            android:textColor="@color/md_white_1000"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:visibility="visible"
            android:background="@color/blue_colorPrimaryDark"
            android:text="@string/buy_200_coins" />
    </LinearLayout>

</ScrollView>