<?xml version="1.0" encoding="utf-8"?><!--
  ~ /**
  ~  * Created by Debarun Lahiri on 2/27/23, 1:22 AM
  ~  * Copyright (c) 2023 . All rights reserved.
  ~  * Last modified 2/26/23, 11:13 PM
  ~  */
  -->

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="10dp"
    app:cardCornerRadius="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:orientation="vertical">


        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/vid_preview" />

        <TextView
            style="@style/Widget.AppCompat.TextView.SpinnerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/are_you_sure_you_want_to_exit" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_exitdialog_yes"
                style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="@string/yes" />


            <Button
                android:id="@+id/btn_exitdialog_no"
                style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_no" />


        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>