<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ /**
  ~  * Created by Debarun Lahiri on 2/27/23, 1:22 AM
  ~  * Copyright (c) 2023 . All rights reserved.
  ~  * Last modified 2/26/23, 11:13 PM
  ~  */
  -->
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="12dp"
    app:cardUseCompatPadding="true"
    card_view:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <ImageView
            android:id="@+id/mainImageView"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:background="@android:color/white"
            android:contentDescription="mainImageView"
            android:scaleType="centerCrop"
         />

        <ImageView
            android:id="@+id/playButtonImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="playButtonImage"
            app:srcCompat="@drawable/ic_play_circle_filled_white_24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mainImageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/repostID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:text="@string/repost"
                android:textSize="12sp"
                app:drawableTopCompat="@drawable/ic_repost" />

            <TextView
                android:id="@+id/shareID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:text="@string/share"
                android:textSize="12sp"
                app:drawableTopCompat="@drawable/ic_share_black_24dp" />

            <TextView
                android:id="@+id/deleteID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:textSize="12sp"
                app:drawableTopCompat="@drawable/ic_delete" />


        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>
